@@ -1,6 +1,7 @@
 Current Version: @VERSION@
 
 ctags-@VERSION@ (@DATE@)
+* Fixed parsing of inline docs: support encoding POD word [Perl].
 * Added support for constants declared via hash reference [Perl].
 * Added support for new "attached" and "detachable" keywords [Eiffel].
 * Fixed parsing of comments after import statements and other tags, contributed by Huandari Lopez to Geany [Python].
